# ET-mainsim

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  evaluate_main_rd_benchmark.py  run_full_frame_thermal_load.py  run_photsim_600w_thermal_benchmark.sbatch  slurm_full_frame_perf_pilot.sh
config/: et_100_det_inputs_1h.xlsx
docs/: continuous_time_shards.md  full_frame_validation.md  full_frame_workflow.md  galaxy_independent_stamp_production_zh.md  galaxy_raw_coverage_science_delivery_zh.md  legacy_workflow.md  main_rd_photsim7_migration.md  reference_photometry_v1.md  source_variability_inputs_zh.md  source_variability_stamp_quicklook_30d_zh.md  stage2_selection_truth.md  stamp_science_delivery_zh.md  stamp_workflow.md
main_rd_1000_eval/: README.md  count_main_rd_stars.py  main_rd_common.py  run_dual_gpu_smoke.sh  smoke_one_frame.py
main_rd_g18_parallel/: DETECTORXY_500X500_SKY23P2_PARAMETER_CHECKLIST.md  DETECTORXY_STRAYLIGHT_BRANCHES_PARAMETER_CHECKLIST.md  FULL_EFFECT_PARAMETER_CHECKLIST.md  README.md  SYNTHETIC_500X500_G24_SKY23P2_PARAMETER_CHECKLIST.md  SYNTHETIC_500X500_PARAMETER_CHECKLIST.md  evaluate_main_rd_benchmark.py  export_last90_truth_tables.py  main_rd_parallel_core.py  simulate_main_rd_1000x1000_g18.py  simulate_main_rd_500x500_detectorxy_sky23p2_colnoise0.py  simulate_main_rd_500x500_detectorxy_sky23p2_colnoise0_straylight10_last90.py  simulate_main_rd_500x500_detectorxy_sky23p2_colnoise0_subpix5_straylight10_last90.py  simulate_main_rd_500x500_magdist_g23_colnoise0.py  simulate_main_rd_8900x9120_g18.py  (+6 more)
(+140 files in other folders)
